--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "ecommerce-website-1",
   "version": "0.1.0",
-  "homepage": "http://vb3d-odoo.github.io/Vb3.net",
+  "homepage": "http://vb3d-odoo.github.io/VB3.NET",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.15.0",
