--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "ecommerce-website-1",
   "version": "0.1.0",
-  "homepage": "https://username.github.io/vb3.net/index.html",
+  "homepage": "https://github.com/Mar4Meo/vb3.net",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.15.0",
