--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "ecommerce-website-1",
   "version": "0.1.0",
   "private": true,
-  "homepage": "/",
+  "homepage": "http:Mar4Meo.github.io/vb3.net",
   "dependencies": {
     "@testing-library/jest-dom": "^5.15.0",
     "@testing-library/react": "^11.2.7",
